--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@
 body {
   font-size: 1.8rem;
   margin: 0;
+  padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
